Lighthouse optimization sitemap and robots file

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="Heating, Plumbing, Gas, Engineering, Commercial, Appliances, Engineers, Company, Wras, Gas Safe, Safe Contractor, DBS Checked">
+    <meta name="description" content="HP2g Ltd is a mechanical engineering company specialising in commercial heating, plumbing and gas systems.">
     <!--CSS Link-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!--Favicon-->
@@ -13,11 +13,11 @@
     <title>HP2g</title>
 </head>
 <body>
-    <nav class="navbar-menu navbar-expand-lg navbar-light bg-light font" id="home">
+    <nav class="navbar-menu navbar-expand-lg navbar-light bg-header font" id="home">
         <img id="logo-top" src="assets/images/logo.png" alt="logo for the company" width="30" height="100%">
         <a class="navbar-brand ml-3" href="index.html">
             <h1 id="header-title">HP<sub id="red-subscript" class="subsize">2</sub>g Ltd</h1>
-            <h6 id="subheading">Commercial Heating Plumbing <span id="red-subscript">and</span> Gas Services</h6>
+            <p id="subheading">Commercial Heating Plumbing <span id="red-subscript">and</span> Gas Services</p>
         </a>
         <div class="navbar-toggle large-toggle">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-9 display-right">
-                <h3 class="display-right pr-3 mt-2 font-header font">Who We Are</h3>
+                <h2 class="display-right pr-3 mt-2 font-header font">Who We Are</h2>
                 <hr/>
                 <p class="font display-right font-text">HP2g Ltd is a mechanical engineering company specialising in commercial heating, plumbing and gas systems, we are, primarily, a maintenance company specialising in supporting schools, factories, and healthcare establishments.<br/>
                     <br/>Formed in 2008 by two engineers who had worked together for a number of years previously, they both felt that a bespoke service was required for their clients who needed, or would benefit from, a one stop shop for gas appliance servicing and reactive call outs for heating, plumbing and gas issues.<br/>
@@ -134,20 +134,20 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-8">
-                <h3 class="pr-3 mt-2 font font-header">What We Do</h3>
+                <h2 class="pr-3 mt-2 font font-header">What We Do</h2>
                 <hr/>
                 <p class="font font-text padding-md">Primarily we are a maintenance company, we maintain commercial gas appliances such as boilers, high level gas fired heaters, also plumbing and water systems and commercial gas pipework systems providing specific written reporting detailing appliance condition and remedial works that may be required.  But we also provide the essential support to each client of a call out service, should the boilers break down or the heating system develop a fault we are available to attend, and fault find until the issue is rectified.<br/>
                 <br/>All our clients have plumbing and hot water systems, we monitor the functionality of our clients’ systems to ensure that they are functioning correctly this might include checking TMV3 blender valves used to blend hot water temperatures down to a safe level for handwashing purposes also ensuring that cold water is being stored correctly and that the temperatures are correct as the water issues from the tap.
                 </p>
                 <div class="row">
                     <div class="col-md-4 col-sm-12 col-xs-12 font pt-3">
-                        <a href="about.html" class="more">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="about.html" class="more">Learn More About Us <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div class="col-md-8 col-sm-12 col-xs-12 pt-2 pb-2 pt-0 display-right whatl">
-                        <img src="assets/images/safecontractor.webp" width="60" class="pr-2">
-                        <img src="assets/images/gassafe.webp" width="90" class="pr-2">
-                        <img src="assets/images/wras.webp" width="80">
-                        <img src="assets/images/dbs.webp" width="80">
+                        <img src="assets/images/safecontractor.webp" width="60" height="100%" class="pr-2" alt="An image of the safe contractor logo">
+                        <img src="assets/images/gassafe.webp" width="60" height="100%" class="pr-2" alt="An image of the gas safe logo">
+                        <img src="assets/images/wras.webp" width="60" height="100%" alt="An image of the wras logo">
+                        <img src="assets/images/dbs.webp" width="60" height="100%" alt="An image of the dbs logo">
                     </div>
                 </div>
             </div>
@@ -160,10 +160,10 @@
         </div>
         <div class="row what">
             <div class="col-md-8 col-sm-12 col-xs-12 pt-2 pb-2 pt-0 text-center whats">
-                <img src="assets/images/safecontractor.webp" width="60" height="100%" class="pr-2">
-                <img src="assets/images/gassafe.webp" width="80" height="100%" class="pr-2">
-                <img src="assets/images/wras.webp" width="70" height="100%">
-                <img src="assets/images/dbs.webp" width="70" height="100%">
+                <img src="assets/images/safecontractor.webp" width="60" height="100%" class="pr-2" alt="An image of the safe contractor logo">
+                <img src="assets/images/gassafe.webp" width="60" height="100%" class="pr-2" alt="An image of the gas safe logo">
+                <img src="assets/images/wras.webp" width="60" height="100%" alt="An image of the wras logo">
+                <img src="assets/images/dbs.webp" width="60" height="100%" alt="An image of the dbs logo">
             </div>
         </div>
     </div>
@@ -174,12 +174,12 @@
     </div>
     <div class="container-fluid" id="services">
         <div class="row">
-            <div class="col-12 center-text">
+            <div class="col-12 text-center">
                 <h3 class="font pt-3 pb-2 font-header">Our Services</h3>
                 <p class="text-center font-text">We offer a variety of different services, for more information on these services please contact us.</p>
             </div>
             <div class="col-lg-4 col-md-6 service-hover" id="service-one">
-                <h4 class="service">Gas Appliance Servicing & Inspection</h4>
+                <h3 class="service">Gas Appliance Servicing & Inspection</h3>
                 <div class="pl-2 font-text" id="service-one-text">
                     <li>Annual Inspection and Written Weporting</li>
                     <li>Report on Condition</li>
@@ -187,7 +187,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 service-hover" id="service-two">
-                <h4 class="service">Statutory Testing</h4>
+                <h3 class="service">Statutory Testing</h3>
                 <div class="pl-2 font-text" id="service-two-text">
                     <li>Gas Fired Boilers</li>
                     <li>Gas Fired Water Heaters</li>
@@ -198,7 +198,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 service-hover" id="service-three">
-                <h4 class="service">Heating Systems</h4>
+                <h3 class="service">Heating Systems</h3>
                 <div class="pl-2 font-text" id="service-three-text">
                     <li>Reactive Callouts</li>
                     <li>Fault Finding</li>
@@ -207,7 +207,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 service-hover" id="service-four">
-                <h4 class="service">Plumbing Sytems</h4>
+                <h3 class="service">Plumbing Sytems</h3>
                 <div class="pl-2 font-text" id="service-four-text">
                     <li>Reactive Callouts</li>
                     <li>Fault Finding</li>
@@ -216,7 +216,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 service-hover" id="service-five">
-                <h4 class="service">Reactive Call-Outs</h4>
+                <h3 class="service">Reactive Call-Outs</h3>
                 <div class="pl-2 font-text" id="service-five-text">
                     <li>Gas Escape</li>
                     <li>Boiler Faults</li>
@@ -225,7 +225,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 service-hover" id="service-six">
-                <h4 class="service">Survey</h4>
+                <h3 class="service">Survey</h3>
                 <div class="pl-2 font-text" id="service-six-text">
                     <li>Heating Systems</li>
                     <li>Plumbing Systems</li>
@@ -242,10 +242,10 @@
     <div class="container-fluid small-test">
         <div class="row">
             <div class="col-12 center-text mb-4">
-                <h3 class="font font-header">Testimonials</h3>
+                <h2 class="font font-header">Testimonials</h2>
             </div>
             <div class="col-sm-2 school-logo">
-                <img src="assets/images/review-logo.webp" alt="Image of school logo">
+                <img src="assets/images/review-logo.webp" alt="An image of Longsands School's logo">
             </div>
             <div class="col-sm-10 col-md-4">
                 <p class="font font-text">Our school is more than 60 years old and needs expert care and attention, most companies wouldn’t come within a mile of it but HP2g have the knowhow and knowledge to just get things done, we really don't know where we would be without them!<br/>
@@ -274,7 +274,7 @@
                 </p>
             </div>
             <div class="col-2 school-logo display-right">
-                <img src="assets/images/bblogo.webp" alt="Image of school logo">
+                <img src="assets/images/bblogo.webp" alt="An image of bensons for beds logo">
             </div>
         </div>
     </div>
@@ -313,11 +313,11 @@
     <div class="container-fluid">
         <div class="row footer-background">          
             <div class="col-sm-4 col-md-3 contact-footer">
-              <h5 class="mt-3 text-light delivery-text font">Contact Us:</h5>
+              <h4 class="mt-3 text-light delivery-text font">Contact Us:</h4>
               <p class="footer-text font">Walnut Tree Cottage<br/>Colmworth Road<br/>Little Staughton<br/>Bedfordshire<br/>MK44 2BX</p>
             </div>
             <div class="col-sm-4 col-md-3 small-none">
-                <h5 class="mt-3 text-light font">Information</h5>
+                <h4 class="mt-3 text-light font">Information</h4>
                 <ul class="mt-3 footer-list">
                     <li><a class="footer-text" href="#services">Gas Appliance Servicing & Inspection</a></li>
                     <li><a class="footer-text" href="#services">Statutory Testing</a></li>
@@ -328,7 +328,7 @@
                 </ul>
             </div>
             <div class="col-sm-4 col-md-3 small-none">
-                <h5 class="mt-3 text-light font">Quick Links</h5>
+                <h4 class="mt-3 text-light font">Quick Links</h4>
                 <ul class="mt-3 footer-list">
                     <li><a class="footer-text" href="#home">Home</a></li>
                     <li><a class="footer-text" href="#who">About Us</a></li>
@@ -337,7 +337,7 @@
                 </ul>
             </div>
             <div class="col-sm-12 col-md-3 footer-socials">
-                <h5 class="mt-3 text-light font">Follow Us</h5>
+                <h4 class="mt-3 text-light font">Follow Us</h4>
                 <ul class="mt-3 footer-list icons">
                     <li><a href="#" target="_blank" rel="noopener"
                       aria-label="Click here to go to our facebook page"><i class="fab fa-facebook"></i></a></li>
@@ -348,9 +348,9 @@
                 </ul>
                 <div class="row">
                     <div class="col-12 mt-5">
-                        <img src="assets/images/safecontractor.webp" width="60" height="100%" class="pr-2">
-                        <img src="assets/images/gassafe.webp" width="90" height="100%" class="pr-2">
-                        <img src="assets/images/wras.webp" width="80" height="100%">
+                        <img src="assets/images/safecontractor.webp" width="60" height="100%" class="pr-2" alt="An image of the safe contractor logo">
+                        <img src="assets/images/gassafe.webp" width="60" height="100%" class="pr-2" alt="An image of the gas safe logo">
+                        <img src="assets/images/wras.webp" width="60" height="100%" alt="An image of the wras logo">
                     </div>
                 </div>
             </div>
