--- a/about.html
+++ b/about.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="Heating, Plumbing, Gas, Engineering, Commercial, Appliances, Engineers, Company, Wras, Gas Safe, Safe Contractor, DBS Checked">
+    <meta name="description" content="HP2g Ltd is a mechanical engineering company specialising in commercial heating, plumbing and gas systems.">
     <!--CSS Link-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <!--Bootstrap CSS Link-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <!---Font Awesome Link-->
-    <script src="https://kit.fontawesome.com/9488bd3455.js" crossorigin="anonymous"></script>
-    <!--Google Font-->
     <!--Favicon-->
     <link rel="icon" type="image/png" href="assets/images/logo.png"/>
     <title>About HP2g</title>
@@ -90,10 +85,10 @@
                 <hr/>
             </div>
             <div class="col-md-6 small-about-none display-right mt-2 pr-5">
-                    <img src="assets/images/safecontractor.webp" width="60" class="pr-2">
-                    <img src="assets/images/gassafe.webp" width="90" class="pr-2">
-                    <img src="assets/images/wras.webp" width="80">
-                    <img src="assets/images/dbs.webp" width="80">
+                    <img src="assets/images/safecontractor.webp" width="60" height="100%" class="pr-2" alt="An image of the safe contractor logo">
+                    <img src="assets/images/gassafe.webp" width="90" height="100%" class="pr-2" alt="An image of the gas safe logo">
+                    <img src="assets/images/wras.webp" width="80" height="100%" alt="An image of the wras logo">
+                    <img src="assets/images/dbs.webp" width="80" height="100%" alt="An image of the dbs logo">
             </div>
             <div class="col-md-8 col-sm-12">
                 <p class="font-text">Primarily we are a maintenance company, we maintain commercial gas appliances such as boilers, high level gas fired heaters, also plumbing and water systems and commercial gas pipework systems providing specific written reporting detailing appliance condition and remedial works that may be required.  But we also provide the essential support to each client of a call out service, should the boilers break down or the heating system develop a fault we are available to attend, and fault find until the issue is rectified.</p>
@@ -101,10 +96,10 @@
                 <p class="font-text">Commercial gas testing is a specialist field, not many engineers have the qualifications required to work on the largest gas installations, but our engineers do, we’re able to investigate any gas issue to any size which some of our clients find very useful as each year we can carry out a full gas tightness test of the whole site or investigate suspected gas leaks without the need to subcontract work to unknown contractors.</p>
             </div>
             <div class="col-12 large-about-none text-center mt-2">
-                <img src="assets/images/safecontractor.webp" width="60" class="pr-2">
-                <img src="assets/images/gassafe.webp" width="90" class="pr-2">
-                <img src="assets/images/wras.webp" width="80">
-                <img src="assets/images/dbs.webp" width="80">
+                <img src="assets/images/safecontractor.webp" width="60" class="pr-2" alt="An image of the safe contractor logo">
+                <img src="assets/images/gassafe.webp" width="90" height="100%" class="pr-2" alt="An image of the gas safe logo">
+                <img src="assets/images/wras.webp" width="80" height="100%" alt="An image of the wras logo">
+                <img src="assets/images/dbs.webp" width="80" height="100%" alt="An image of the dbs logo">
         </div>
             <div class="col-4 center-video mt-4 small-about-none">
                 <video width="300" height="400" controls>
@@ -296,9 +291,9 @@
             </ul>
             <div class="row">
                 <div class="col-12 mt-5">
-                    <img src="assets/images/safecontractor.webp" width="60" class="pr-2">
-                    <img src="assets/images/gassafe.webp" width="90" class="pr-2">
-                    <img src="assets/images/wras.webp" width="80">
+                    <img src="assets/images/safecontractor.webp" width="60" height="100%" class="pr-2" alt="An image of the safe contractor logo">
+                    <img src="assets/images/gassafe.webp" width="90" height="100%" class="pr-2" alt="An image of the gas safe logo">
+                    <img src="assets/images/wras.webp" width="80" height="100%" alt="An image of the wras logo">
                 </div>
             </div>
         </div>
@@ -307,6 +302,10 @@
 <!--Bootstrap Javascript Link-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+<!--Bootstrap CSS Link-->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+<!---Font Awesome Link-->
+<script src="https://kit.fontawesome.com/9488bd3455.js" crossorigin="anonymous"></script>
 <!--JavaScript Link-->
 <script src="assets/js/about.js"></script> 
 </body>
