--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                 <h3 class="pr-3 mt-2 font font-header">What We Do</h3>
                 <hr/>
             </div>
-            <div class="col-md-6 small-about-none display-right mt-2 pr-5">
+            <div class="col-md-6 small-about-none text-center mt-2 pr-5">
                     <img src="assets/images/safecontractor.webp" width="60" height="100%" class="pr-2" alt="An image of the safe contractor logo">
                     <img src="assets/images/gassafe.webp" width="90" height="100%" class="pr-2" alt="An image of the gas safe logo">
                     <img src="assets/images/wras.webp" width="80" height="100%" alt="An image of the wras logo">
