--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-6 header-nav pt-3 pb-3 pl-4 font">
-                <button class="pl-2 pr-2 pt-2 pb-2 contact"><i class="fa-solid fa-envelope"></i> CONTACT US</button>
+            <div class="col-6 header-nav pt-3 pb-3 pl-4 font contact-container">
+                <a href="mailto:info@hp2g.co.uk" class="pl-2 pr-2 pt-2 pb-2 contact"><i class="fa-solid fa-envelope"></i> CONTACT US</a>
             </div>
             <div class="col-6 header-nav pt-4 font header-right big-contact">
                 <p class="text-light" id="email">
@@ -85,14 +85,14 @@
                     <div class="col-12 user-image-one"></div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-9 display-right">
+            <div class="col-sm-12 col-md-9 display-right contact-container-link">
                 <h2 class="display-right pr-3 mt-2 font-header font">Who We Are</h2>
                 <hr/>
                 <p class="font display-right font-text">HP2g Ltd is a mechanical engineering company specialising in commercial heating, plumbing and gas systems, we are, primarily, a maintenance company specialising in supporting schools, factories, and healthcare establishments.<br/>
                     <br/>Formed in 2008 by two engineers who had worked together for a number of years previously, they both felt that a bespoke service was required for their clients who needed, or would benefit from, a one stop shop for gas appliance servicing and reactive call outs for heating, plumbing and gas issues.<br/>
                     <br/>We are gas safe registered and fully qualified to work on a range of gas appliances and can carry out gas testing and fault finding on large installations that use both natural and liquid petroleum gas. 
                 </p>
-                <button class="more font">Contact Us <i class="fa-solid fa-arrow-right"></i></button>
+                <a href="mailto:info@hp2g.co.uk" class="more font">Contact Us <i class="fa-solid fa-arrow-right"></i></a>
             </div>
         </div>
     </div>
@@ -140,14 +140,14 @@
                 <br/>All our clients have plumbing and hot water systems, we monitor the functionality of our clients’ systems to ensure that they are functioning correctly this might include checking TMV3 blender valves used to blend hot water temperatures down to a safe level for handwashing purposes also ensuring that cold water is being stored correctly and that the temperatures are correct as the water issues from the tap.
                 </p>
                 <div class="row">
-                    <div class="col-md-4 col-sm-12 col-xs-12 font pt-3">
+                    <div class="col-md-4 col-sm-12 col-xs-12 font pt-3 contact-container-link">
                         <a href="about.html" class="more">Learn More About Us <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div class="col-md-8 col-sm-12 col-xs-12 pt-2 pb-2 pt-0 display-right whatl">
-                        <img src="assets/images/safecontractor.webp" width="60" height="100%" class="pr-2" alt="An image of the safe contractor logo">
-                        <img src="assets/images/gassafe.webp" width="60" height="100%" class="pr-2" alt="An image of the gas safe logo">
-                        <img src="assets/images/wras.webp" width="60" height="100%" alt="An image of the wras logo">
-                        <img src="assets/images/dbs.webp" width="60" height="100%" alt="An image of the dbs logo">
+                        <img src="assets/images/safecontractor.webp" width="60" height="auto" class="pr-2" alt="An image of the safe contractor logo">
+                        <img src="assets/images/gassafe.webp" width="60" height="auto" class="pr-2" alt="An image of the gas safe logo">
+                        <img src="assets/images/wras.webp" width="60" height="auto" alt="An image of the wras logo">
+                        <img src="assets/images/dbs.webp" width="60" height="auto" alt="An image of the dbs logo">
                     </div>
                 </div>
             </div>
@@ -160,10 +160,10 @@
         </div>
         <div class="row what">
             <div class="col-md-8 col-sm-12 col-xs-12 pt-2 pb-2 pt-0 text-center whats">
-                <img src="assets/images/safecontractor.webp" width="60" height="100%" class="pr-2" alt="An image of the safe contractor logo">
-                <img src="assets/images/gassafe.webp" width="60" height="100%" class="pr-2" alt="An image of the gas safe logo">
-                <img src="assets/images/wras.webp" width="60" height="100%" alt="An image of the wras logo">
-                <img src="assets/images/dbs.webp" width="60" height="100%" alt="An image of the dbs logo">
+                <img src="assets/images/safecontractor.webp" width="60" height="auto" class="pr-2" alt="An image of the safe contractor logo">
+                <img src="assets/images/gassafe.webp" width="60" height="auto" class="pr-2" alt="An image of the gas safe logo">
+                <img src="assets/images/wras.webp" width="60" height="auto" alt="An image of the wras logo">
+                <img src="assets/images/dbs.webp" width="60" height="auto" alt="An image of the dbs logo">
             </div>
         </div>
     </div>
@@ -305,8 +305,8 @@
     </div>
     <div class="container-fluid">
         <div class="row mt-2 mb-2">
-            <div class="col-12 font footer-quote">
-                <button class="pl-2 pr-2 pt-2 pb-2 contact"><i class="fa-solid fa-envelope"></i> CONTACT US</button>
+            <div class="col-12 font footer-quote contact-container mt-2 mb-2">
+                <a href="mailto:info@hp2g.co.uk" class="pl-2 pr-2 pt-2 pb-2 contact"><i class="fa-solid fa-envelope"></i> CONTACT US</a>
             </div>
         </div>
     </div>
@@ -330,8 +330,8 @@
             <div class="col-sm-4 col-md-3 small-none">
                 <h4 class="mt-3 text-light font">Quick Links</h4>
                 <ul class="mt-3 footer-list">
-                    <li><a class="footer-text" href="#home">Home</a></li>
-                    <li><a class="footer-text" href="#who">About Us</a></li>
+                    <li><a class="footer-text" href="index.html">Home</a></li>
+                    <li><a class="footer-text" href="about.html">About Us</a></li>
                     <li><a class="footer-text" href="#services">Our Services</a></li>
                     <li><a class="footer-text" href="#reviews">Testimonials</a></li>
                 </ul>
@@ -348,9 +348,9 @@
                 </ul>
                 <div class="row">
                     <div class="col-12 mt-5">
-                        <img src="assets/images/safecontractor.webp" width="60" height="100%" class="pr-2" alt="An image of the safe contractor logo">
-                        <img src="assets/images/gassafe.webp" width="60" height="100%" class="pr-2" alt="An image of the gas safe logo">
-                        <img src="assets/images/wras.webp" width="60" height="100%" alt="An image of the wras logo">
+                        <img src="assets/images/safecontractor.webp" width="60" height="auto" class="pr-2" alt="An image of the safe contractor logo">
+                        <img src="assets/images/gassafe.webp" width="60" height="auto" class="pr-2" alt="An image of the gas safe logo">
+                        <img src="assets/images/wras.webp" width="60" height="auto" alt="An image of the wras logo">
                     </div>
                 </div>
             </div>
