--- a/about.html
+++ b/about.html
@@ -51,8 +51,8 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-6 header-nav pt-3 pb-3 pl-4 font">
-                <button class="pl-2 pr-2 pt-2 pb-2 contact"><i class="fa-solid fa-envelope"></i> CONTACT US</button>
+            <div class="col-6 header-nav pt-3 pb-3 pl-4 font contact-container">
+                <a href="mailto:info@hp2g.co.uk" class="pl-2 pr-2 pt-2 pb-2 contact"><i class="fa-solid fa-envelope"></i> CONTACT US</a>
             </div>
             <div class="col-6 header-nav pt-4 font header-right big-contact">
                 <p class="text-light" id="email">
@@ -80,15 +80,15 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-6 col-sm-12 mt-2">
+            <div class="col-md-9 col-sm-12 mt-2">
                 <h3 class="pr-3 mt-2 font font-header">What We Do</h3>
                 <hr/>
             </div>
-            <div class="col-md-6 small-about-none text-center mt-2 pr-5">
-                    <img src="assets/images/safecontractor.webp" width="60" height="100%" class="pr-2" alt="An image of the safe contractor logo">
-                    <img src="assets/images/gassafe.webp" width="90" height="100%" class="pr-2" alt="An image of the gas safe logo">
-                    <img src="assets/images/wras.webp" width="80" height="100%" alt="An image of the wras logo">
-                    <img src="assets/images/dbs.webp" width="80" height="100%" alt="An image of the dbs logo">
+            <div class="col-md-3 small-about-none mt-2">
+                    <img src="assets/images/safecontractor.webp" width="60" height="auto" class="pr-2" alt="An image of the safe contractor logo">
+                    <img src="assets/images/gassafe.webp" width="90" height="auto" class="pr-2" alt="An image of the gas safe logo">
+                    <img src="assets/images/wras.webp" width="80" height="auto" alt="An image of the wras logo">
+                    <img src="assets/images/dbs.webp" width="80" height="auto" alt="An image of the dbs logo">
             </div>
             <div class="col-md-8 col-sm-12">
                 <p class="font-text">Primarily we are a maintenance company, we maintain commercial gas appliances such as boilers, high level gas fired heaters, also plumbing and water systems and commercial gas pipework systems providing specific written reporting detailing appliance condition and remedial works that may be required.  But we also provide the essential support to each client of a call out service, should the boilers break down or the heating system develop a fault we are available to attend, and fault find until the issue is rectified.</p>
@@ -96,10 +96,10 @@
                 <p class="font-text">Commercial gas testing is a specialist field, not many engineers have the qualifications required to work on the largest gas installations, but our engineers do, we’re able to investigate any gas issue to any size which some of our clients find very useful as each year we can carry out a full gas tightness test of the whole site or investigate suspected gas leaks without the need to subcontract work to unknown contractors.</p>
             </div>
             <div class="col-12 large-about-none text-center mt-2">
-                <img src="assets/images/safecontractor.webp" width="60" class="pr-2" alt="An image of the safe contractor logo">
-                <img src="assets/images/gassafe.webp" width="90" height="100%" class="pr-2" alt="An image of the gas safe logo">
-                <img src="assets/images/wras.webp" width="80" height="100%" alt="An image of the wras logo">
-                <img src="assets/images/dbs.webp" width="80" height="100%" alt="An image of the dbs logo">
+                <img src="assets/images/safecontractor.webp" width="60" height="auto" class="pr-2" alt="An image of the safe contractor logo">
+                <img src="assets/images/gassafe.webp" width="90" height="auto" class="pr-2" alt="An image of the gas safe logo">
+                <img src="assets/images/wras.webp" width="80" height="auto" alt="An image of the wras logo">
+                <img src="assets/images/dbs.webp" width="80" height="auto" alt="An image of the dbs logo">
         </div>
             <div class="col-4 center-video mt-4 small-about-none">
                 <video width="300" height="400" controls>
@@ -262,19 +262,19 @@
         <div class="col-sm-4 col-md-3 small-none">
             <p class="mt-3 text-light font">Information</p>
             <ul class="mt-3 footer-list">
-                <li><a class="footer-text" href="#">Gas Appliance Servicing & Inspection</a></li>
-                <li><a class="footer-text" href="#">Statutory Testing</a></li>
-                <li><a class="footer-text" href="#">Heating Systems</a></li>
-                <li><a class="footer-text" href="#">Plumbing Systems</a></li>
-                <li><a class="footer-text" href="#">Reactive Call-Outs</a></li>
-                <li><a class="footer-text" href="#">Survey</a></li>
+                <li><a class="footer-text" href="#services">Gas Appliance Servicing & Inspection</a></li>
+                <li><a class="footer-text" href="#services">Statutory Testing</a></li>
+                <li><a class="footer-text" href="#services">Heating Systems</a></li>
+                <li><a class="footer-text" href="#services">Plumbing Systems</a></li>
+                <li><a class="footer-text" href="#services">Reactive Call-Outs</a></li>
+                <li><a class="footer-text" href="#services">Survey</a></li>
             </ul>
         </div>
         <div class="col-sm-4 col-md-3 small-none">
             <p class="mt-3 text-light font">Quick Links</p>
             <ul class="mt-3 footer-list">
-                <li><a class="footer-text" href="#home">Home</a></li>
-                <li><a class="footer-text" href="#who">About Us</a></li>
+                <li><a class="footer-text" href="index.html">Home</a></li>
+                <li><a class="footer-text" href="about.html">About Us</a></li>
                 <li><a class="footer-text" href="#services">Our Services</a></li>
                 <li><a class="footer-text" href="#reviews">Testimonials</a></li>
             </ul>
@@ -291,9 +291,9 @@
             </ul>
             <div class="row">
                 <div class="col-12 mt-5">
-                    <img src="assets/images/safecontractor.webp" width="60" height="100%" class="pr-2" alt="An image of the safe contractor logo">
-                    <img src="assets/images/gassafe.webp" width="90" height="100%" class="pr-2" alt="An image of the gas safe logo">
-                    <img src="assets/images/wras.webp" width="80" height="100%" alt="An image of the wras logo">
+                    <img src="assets/images/safecontractor.webp" width="60" height="auto" class="pr-2" alt="An image of the safe contractor logo">
+                    <img src="assets/images/gassafe.webp" width="90" height="auto" class="pr-2" alt="An image of the gas safe logo">
+                    <img src="assets/images/wras.webp" width="80" height="auto" alt="An image of the wras logo">
                 </div>
             </div>
         </div>
