--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#reviews">Testimonials</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="vacancies.html">Vacancies</a>
+            </li>
           </ul>
         </div>
     </nav>
