--- a/vacancies.html
+++ b/vacancies.html
@@ -78,7 +78,7 @@
                 <h2>Internal Vacancies</h2>
                 <p>We are currently recruiting! Please see a list of the job adverts below:</p>
             </div>
-            <div class="col-4 contact-container vacancy font font-header p-2 mb-2 pb-4 ml-2">
+            <div class="col-sm-12 col-md-6 contact-container vacancy font font-header p-2 mb-2 pb-4 ml-2">
                 <h3 class="vacancy-header"><b>Heating, Plumbing and Gas Engineer</b></h3>
                 <p class="mb-3">Currently seeking a Heating, Plumbing and Gas Engineer who can perform gas appliance servicing and reactive call outs for heating, plumbing and gas issues.</p>
                 <p><i>Please send through your CV and a cover letter.</i></p>
