Vacancy details updated

--- a/vacancies.html
+++ b/vacancies.html
@@ -75,14 +75,14 @@
     <div class="container-fluid vacancies">
         <div class="row">
             <div class="col-12 font font-header pt-4">
-                <h2>Internal Vacancies</h2>
-                <p>We are currently recruiting! Please see a list of the job adverts below:</p>
+                <h2 class="font-header">Internal Vacancies</h2>
+                <p class="font-text">We are currently recruiting! Please see a list of the job adverts below:</p>
             </div>
-            <div class="col-sm-12 col-md-6 contact-container vacancy font font-header p-2 mb-2 pb-4 ml-2">
-                <h3 class="vacancy-header"><b>Heating, Plumbing and Gas Engineer</b></h3>
-                <p class="mb-3">Currently seeking a Heating, Plumbing and Gas Engineer who can perform gas appliance servicing and reactive call outs for heating, plumbing and gas issues.</p>
-                <p><i>Please send through your CV and a cover letter.</i></p>
-                <a href="mailto:info@hp2g.co.uk" class="pl-2 pr-2 pt-2 pb-2 contact"><i class="fa-solid fa-envelope"></i> CONTACT US</a>
+            <div class="col-sm-12 col-md-6 contact-container vacancy font p-2 mb-2 pb-4">
+                <h3 class="vacancy-header font-header"><b>Heating, Plumbing and Gas Engineer</b></h3>
+                <p class="mb-3 font-text">Currently seeking a Heating, Plumbing and Gas Engineer who can perform gas appliance servicing and reactive call outs for heating, plumbing and gas issues.</p>
+                <p class="font-text"><i>Please send through your CV and a cover letter.</i></p>
+                <a href="mailto:info@hp2g.co.uk" class="pl-2 pr-2 pt-2 pb-2 contact">Apply Now</a>
             </div>
         </div>
     </div>
