canonical tag has been added for SEO to the site

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!--Favicon-->
     <link rel="icon" type="image/png" href="assets/images/logo.png"/>
+    <link rel="canonical" href="http://www.hp2gltd.co.uk/" />
     <title>HP2g</title>
 </head>
 <body>
