SEO improvements made to the site

--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Heating, Plumbing, Gas, Engineering, Commercial, Appliances, Engineers, Company, Wras, Gas Safe, Safe Contractor, DBS Checked">
-    <meta name="description" content="HP2g Ltd is a mechanical engineering company specialising in commercial heating, plumbing and gas systems.">
+    <meta name="description" content="HP2g Ltd: Specializing in commercial heating, plumbing, and gas systems. Expert engineering services for efficient solutions and reliable installations..">
     <!--CSS Link-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!--Favicon-->
     <link rel="icon" type="image/png" href="assets/images/logo.png"/>
     <link rel="canonical" href="http://www.hp2gltd.co.uk/" />
-    <title>HP2g</title>
+    <title>HP2g: Commercial Heating Plumbing and Gas Services</title>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "url": "http://www.hp2gltd.co.uk/",
+            "logo": "http://www.hp2gltd.co.uk/assets/images/logo.png"
+        }
+    </script>
 </head>
 <body>
     <nav class="navbar-menu navbar-expand-lg navbar-light bg-header font" id="home">
