--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Heating, Plumbing, Gas, Engineering, Commercial, Appliances, Engineers, Company, Wras, Gas Safe, Safe Contractor, DBS Checked">
-    <meta name="description" content="HP2g Ltd: Specializing in commercial heating, plumbing, and gas systems. Expert engineering services for efficient solutions and reliable installations..">
+    <meta name="description" content="HP2g Ltd Commercial Heating Plumbing and Gas Services: Specializing in commercial heating, plumbing, and gas systems. Expert engineering services for efficient solutions and reliable installations..">
     <!--CSS Link-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!--Favicon-->
