--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Favicon-->
     <link rel="icon" type="image/png" href="assets/images/logo.png"/>
     <link rel="canonical" href="http://www.hp2gltd.co.uk/" />
-    <title>HP2g: Commercial Heating Plumbing and Gas Services</title>
+    <title>HP2g Ltd: Commercial Heating Plumbing and Gas Services</title>
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
