google analytics has been added onto the site

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
             "logo": "http://www.hp2gltd.co.uk/assets/images/logo.png"
         }
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TSQ3W01MGH"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-TSQ3W01MGH');
+    </script>
 </head>
 <body>
     <nav class="navbar-menu navbar-expand-lg navbar-light bg-header font" id="home">
